# advent_of_code_2020

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  app.py  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
src/: __init__.py  app.py  day_1.py  day_2.py  day_3.py  day_7.py  prelude.py  solve.py
src/day_1/: __init__.py  day_1.py  input.txt
src/day_2/: __init__.py  day_2.py
src/day_3/: __init__.py  day_3.py
src/day_7/: __init__.py  day_7.py
src/day_8/: day_8.py
tests/: conftest.py  test_days.py  test_minizinc.py  test_problems.py  test_solver.py
