[tool.poetry]
name = "aoc2020"
version = "0.1.0"
description = "Solutions to the AOC2020 problems using MiniZinc"
authors = ["Justin Rawlings"]

[tool.poetry.dependencies]
python = "^3.9"
cattrs = "^1.1.2"
attrs = "^20.3.0"
h2o-wave = "0.11.0"
altair = "^4.1.0"
minizinc = "^0.4.2"
pendulum = "^2.1.2"
logzero = "^1.6.3"

[tool.poetry.dev-dependencies]
pytest = "^6.2.1"
pytest-asyncio = "^0.14.0"
pytest-watch = "^4.2.0"
black = "^20.8b1"
mypy = "^0.790"
ipython = "^7.19.0"
jedi = "0.17.2"

[tool.pytest.ini_options]
addopts = "-v"
testpaths = [
    "tests"
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"